fixed dark mode - updated using dynamic class dark_mode

--- a/popup.css
+++ b/popup.css
@@ -400,10 +400,18 @@ ul li{
     border-radius: 50%;
   }
 
+  #clipboard_list li.dark_mode,
+#clipboard_list li.dark_mode p {
+    background-color: black !important;
+    color: white !important;
+    border-color: gray !important;
+  }
+
+
 
   .dark_mode {
-    background-color: black !important;
-    color: red !important;
+    background-color: black;
+    color : white;
   }
 
   li.dark_mode:hover {
